# construct-ai-agent

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  .prettierignore  BETA_INSTALLER_TEST.md  CHANGELOG.md  CONTRIBUTORS.md  E2E_REAL_LLM_TEST.md  E2E_TEST_PHASE1.md  E2E_TEST_RESULTS.md  LEGAL.md  LICENSE  README.md  SECURITY_AUDIT.md  THIRD_PARTY_LICENSES.md  VERIFICATION_REPORT.md  eslint.config.js  index.html  package.json  tailwind.config.js  vite.config.ts  vitest.config.ts  worklog.md
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: build.yml  release.yml
agent-backend/: app.py  pyinstaller_build.py  pyproject.toml  pytest.ini  requirements-lock.txt  requirements-test.txt  requirements.txt
agent-backend/agents/: collaboration_protocols.py  context_bus.py  orchestrator_v2.py  performance.py
agent-backend/checkpoint/: __init__.py  auto_restore.py  checkpoint_v2.py  encryption.py
agent-backend/core/: context_engine.py  executor.py  llm_service.py  mock_llm.py  safety.py
agent-backend/git/: __init__.py  branch_manager.py  commit_generator.py  precommit_pipeline.py
agent-backend/mcp/: connection_manager.py  fallback_chain.py  rate_limit_handler.py
agent-backend/memory/: __init__.py  semantic.py
agent-backend/monitoring/: __init__.py  performance_monitor.py
agent-backend/resilience/: __init__.py  circuit_breaker.py
agent-backend/scheduler/: __init__.py  smart_scheduler.py
agent-backend/screen/: __init__.py  action_recorder.py  screen_controller.py  visual_finder.py
agent-backend/streaming/: __init__.py  optimizer.py
agent-backend/testing/: __init__.py  load_tester.py
agent-backend/tools/: __init__.py  code_tools.py  file_tools.py  ghidra_decompile.py  ghidra_export.py  ghidra_tool.py  git_tools.py  markitdown_tool.py  shell_tools.py
docs/: API.md  ARCHITECTURE.md  Build_Troubleshooting_Guide.docx  CONFIGURATION.md  INSTALL.md  Strategic_Project_Plan.docx  TROUBLESHOOTING.md  UI_Walkaround_and_Feature_Tour.docx
icons/: icon.icns
src/main/: Cargo.toml  tauri.conf.json
src/main/capabilities/: default.json
src/main/icons/: README.md
src/main/src/: db.rs  lib.rs  sidecar.rs  state.rs  tray.rs
src/main/src/commands/: agent.rs
src/renderer/: App.tsx  (+2 more)
(+62 files in other folders)
