[package]
name = "construct"
version = "0.1.0"
description = "Construct - A Tauri Desktop App"
authors = ["Razisafir"]
edition = "2021"
rust-version = "1.70"

[lib]
name = "construct_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "construct"
path = "src/main.rs"

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# -- memory layer --
rusqlite = { version = "0.40", features = ["bundled", "uuid", "chrono"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.11", features = ["v4", "serde"] }

# -- agent layer --
parking_lot = "0.12"

# -- HTTP client for calling Python backend --
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["rt-multi-thread"] }

[build-dependencies]
tauri-build = { version = "2", features = [] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
