[package]
name = "construct"
version = "0.1.0"
description = "Construct - A Tauri Desktop App"
authors = ["Razisafir"]
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "construct_lib"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "construct"
path = "src/main.rs"

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# -- memory layer --
rusqlite = { version = "0.32", features = ["bundled", "uuid", "chrono"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.11", features = ["v4", "serde"] }

# -- agent layer --
parking_lot = "0.12"

# -- HTTP client for calling Python backend --
reqwest = { version = "0.13", features = ["json", "rustls-tls"], default-features = false }
tokio = { version = "1", features = ["rt-multi-thread", "time"] }

# -- logging --
log = "0.4"
tauri-plugin-log = "2"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
